# ALPR_Cpp

./: CMakeLists.txt  main.cpp
Assets/SVM/Res/: 16bins_2x2_1.csv  20bins_2x2_1.csv
Source/Location/: Location.cpp  Location.h  correction.cpp  correction.h  exact_location.cpp  exact_location.h  location.cpp  location.h  noise.cpp  noise.h  plate_chooser.cpp  plate_chooser.h  projections.cpp  projections.h  svm.cpp  svm.h  tests.cpp  tests.h  transitions.cpp  transitions.h  wavelet.cpp  wavelet.h
Source/ML/: HOT.cpp  HOT.h  OCRTarbia.cpp  OCRTarbia.h
Source/Models/: CharSegment.cpp  CharSegment.h  Plaque.cpp  Plaque.h
Source/OCR/: OCR.cpp  OCR.h
Source/Segmentation/: PreSegmentation.cpp  PreSegmentation.h  SegmentationByContours.cpp  SegmentationByContours.h
Source/Utils/: opencv.cpp  opencv.h  stats.cpp  stats.h  strings.cpp  strings.h
location/: exact_location.cpp  exact_location.h  location.cpp  location.h  noise.cpp  noise.h  plate_chooser.cpp  plate_chooser.h  tests.cpp  tests.h  transitions.cpp  wavelet.cpp  wavelet.h
utils/: opencv.cpp  opencv.h
